SYSTEM dockerization